3598: fixes after review